syntax = "proto3";

option go_package = "./auth";
package protos;

service AuthService {
    rpc GetSession (GetSessionRequest) returns (GetSessionResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Logout (LogoutRequest) returns (LogoutResponse) {}
}

message GetSessionRequest {
    string auth_token = 1;
}

message GetSessionResponse {
    uint32 user_id = 1;
    string username = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string auth_token = 1;
}

message LogoutRequest {
    string auth_token = 1;
}

message LogoutResponse {
    bool success = 1;
}
